2008-01-07    <bruno.pincon@iecn.u-nancy.fr>
	* src/librand:
	add several new probability distributions
	for random generation (see the grand help page)
	
2005-05-01    <jpc@cermics.enpc.fr>

	* src/objects/cells:
	* src/interp/*: 

	first step to introduce cells !
	(limited to 2 indices) 
	
2005-04-29    <jpc@cermics.enpc.fr>

	* src/interp/*:
	* src/object/MatObj.c:
	    && and || added  
	    same function as & and | except 
	    that when the first argument is scalar 
	    the evaluation is sequential. 
		
	* src/menus:
	* src/graphics:
	* src/gtk2/strings.c 
	utf8 conversion for a set of prmitives 
	x_message etc...
	
2005-04-27    <jpc@cermics.enpc.fr>

	* src/* : nsp_xdr_XXX prototype slighly changed
	lot of file involved but small change.
	
2005-04-19    <jpc@cermics.enpc.fr>

	* src/objects/object.c: 
	a generic eq (==) and ne (<>) added 
	in object for dealing with a==b and a<>b when 
	a and b do not share the same type.
	A method equal was also added obj1.equal[obj2] 
	test that obj1 and obj2 are copies 
	(same semantic as and(obj1==obj2))

2005-04-14    <jpc@cermics.enpc.fr>

	* src/lapack added. It contains a set 
	of lapack based function (qr,svd,inv,...) 
	and their interfaces. This is unfinished and 
	not fully tested.

	
	
